# course_mlops_spam_classifier

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  renovate.json  tasks.py
.github/workflows/: ci.yml  release.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  postgresql.yaml
chart/templates/api/: deployment.yaml  service.yaml
course_mlops/: cli.py  exceptions.py  logging.py  utils.py
course_mlops/api/: __init__.py  config.py  dependencies.py  enums.py  exception_handlers.py  exceptions.py  loader.py  main.py  routes.py  schemas.py  service.py
course_mlops/common/: db.py
course_mlops/common/dal/: exceptions.py  transaction.py
course_mlops/monitoring/: config.py  dal.py  db.py  drift.py  enums.py  exceptions.py  reference.py  routes.py  schemas.py  service.py
course_mlops/train/: config.py  enums.py  exceptions.py  pipeline.py
course_mlops/train/models/: __init__.py  base.py  factory.py
course_mlops/train/models/logistic_regression/: __init__.py  config.py  model.py
course_mlops/train/models/xgboost/: __init__.py  config.py  model.py
course_mlops/train/preprocessing/: data.py  features.py
course_mlops/train/reporting/: evaluation.py  plots.py
migrations/: env.py
migrations/versions/: 001_initial_prediction_logs.py
tests/integration/: conftest.py  test_api.py  test_mlflow.py  test_monitoring.py  test_training.py
tests/unit/: test_cli.py  test_exceptions.py  test_logging.py  test_utils.py
tests/unit/api/: conftest.py  test_enums.py  test_exception_handlers.py  test_loader.py  test_main.py  test_monitoring_routes.py  test_routes.py  test_schemas.py  test_service.py
tests/unit/monitoring/: conftest.py  test_drift.py  test_reference.py  test_schemas.py  test_service.py
tests/unit/train/: conftest.py  test_config.py  test_evaluation.py  test_models_factory.py  test_models_logistic_regression.py  test_models_xgboost.py  test_pipeline.py  test_plots.py  test_preprocessing_data.py  test_preprocessing_features.py
