[project]
name = "course-mlops"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "mlflow>=3.8.1",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "typer>=0.15.0",
    "xgboost>=3.1.3",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.14.0",
    "evidently>=0.6.0",
    "boto3>=1.42.49",
]

[dependency-groups]
dev = [
    "commitizen>=4.11.0",
    "httpx>=0.27.0",
    "invoke>=2.2.1",
    "pre-commit>=4.5.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "notebook/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "ISC001",   # Conflicts with formatter
    "N803",     # Argument name should be lowercase (ML convention: X, y, X_train, etc.)
    "N806",     # Variable in function should be lowercase (ML convention)
    "PLR0915",  # Too many statements (training functions are complex)
    "PLR0913",  # Too many arguments (common in ML)
    "PLR2004",  # Magic value used in comparison
    "PTH123",   # `open()` should use Path.open() (acceptable for simple operations)
    "SIM108",   # Use ternary operator (style preference)
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "notebook/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[project.scripts]
mlops_course = "course_mlops.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["course_mlops"]

[tool.uv]
package = true
override-dependencies = [
    "plotly>=6.5.1",
]

[tool.commitizen]
name = "cz_customize"
version = "0.2.0"
tag_format = "$major.$minor.$patch"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
annotated_tag = false

[tool.commitizen.customize]
message_template = "{{change_type}}({{scope}}): {{message}}"
example = "added(feat): this feature enables customize through config file"
schema = "<type>(<scope>): <body>"
schema_pattern = '(Draft: )?(added|removed|fixed|changed|bump)(\((feat|docs|test|tech|deps)\))?: (.*)'
bump_pattern = '^(break|added\(feat\)|removed\(feat\)|fixed|changed\(deps\))'
bump_map = { "break" = "MAJOR", 'added\(feat\)' = "MINOR", 'removed\(feat\)' = "MINOR", 'changed\(deps\)' = "PATCH", 'added\(tech\)' = "PATCH", "fixed" = "PATCH" }
change_type_order = ["BREAKING CHANGE", "added", "removed", "changed", "fixed"]
commit_parser = '^(?P<change_type>added|removed|fixed|changed)(?P<scope>\(feat\)|\(docs\)|\(test\)|\(tech\)|\(deps\)): (?P<message>.*)?'
changelog_pattern = "^(added|removed|fixed|changed)?(!)?"
change_type_map = { "added" = "Added", "fixed" = "Fixed", "removed" = "Removed", "changed" = "Changed" }

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
message = "What is the type of change you're committing?"
choices = [
    "added",
    "removed",
    "fixed",
    "changed",
    "bump"
]

[[tool.commitizen.customize.questions]]
type = "list"
name = "scope"
message = "What is the scope of this change?"
choices = [
    "feat",
    "docs",
    "test",
    "tech",
    "deps"
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "Write a short, imperative tense description of the change: "
